cloudinary auto implementation

--- a/editorial-team.html
+++ b/editorial-team.html
@@ -169,7 +169,7 @@
                     <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
                         <div class="w-32 h-32 mx-auto mb-6 relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
-                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619321/242cad50-aec2-4704-a53a-0c2f12e242e4_jvg8mk.jpg" alt="Prof. Akinyemi" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619321/242cad50-aec2-4704-a53a-0c2f12e242e4_jvg8mk.jpg" alt="Prof. Akinyemi" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
                         <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. (Sir) Akinwande Bolaji Akinyemi, CFR</h3>
                         <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Former Minister of Foreign Affairs</div>
@@ -183,7 +183,7 @@
                     <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
                         <div class="w-32 h-32 mx-auto mb-6 relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
-                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619322/969e04e7-fb21-4eb0-b3a5-8f04eafd9f6b_fzrisi.jpg" alt="Prof. Olatunji-Bello" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619322/969e04e7-fb21-4eb0-b3a5-8f04eafd9f6b_fzrisi.jpg" alt="Prof. Olatunji-Bello" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
                         <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. Ibiyemi Ibilola Olatunji-Bello, mni, NPOM, FSPSP</h3>
                         <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Vice Chancellor</div>
@@ -196,7 +196,7 @@
                     <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
                         <div class="w-32 h-32 mx-auto mb-6 relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
-                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619323/e0e9a512-17cd-462c-a65c-08261573694b_sdcnet.jpg" alt="Prof. Akinterinwa" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619323/e0e9a512-17cd-462c-a65c-08261573694b_sdcnet.jpg" alt="Prof. Akinterinwa" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
                         <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. Bolaji Akinterinwa</h3>
                         <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Former Director-General, NIIA</div>
@@ -210,7 +210,7 @@
                     <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
                         <div class="w-32 h-32 mx-auto mb-6 relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
-                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619326/6ca7d825-43de-44e3-9b74-6998e8ce86e2_amg3p7.jpg" alt="Prof. Moghalu" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619326/6ca7d825-43de-44e3-9b74-6998e8ce86e2_amg3p7.jpg" alt="Prof. Moghalu" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
                         <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. Kingsley Moghalu</h3>
                         <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">President and Vice Chancellor</div>
@@ -224,7 +224,7 @@
                     <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
                         <div class="w-32 h-32 mx-auto mb-6 relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
-                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619323/a434acbe-ef4d-49da-836c-73f58cd435da_hdnjdz.jpg" alt="Lt Gen Adeosun" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619323/a434acbe-ef4d-49da-836c-73f58cd435da_hdnjdz.jpg" alt="Lt Gen Adeosun" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
                         <h3 class="font-display text-xl font-bold text-primary mb-3">Lt Gen Lamidi O Adeosun (Rtd) CFR</h3>
                         <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Military Strategy Expert</div>
@@ -248,7 +248,7 @@
                     <div class="glass-effect rounded-3xl p-12 text-center bg-white/40">
                         <div class="w-40 h-40 mx-auto mb-8 relative">
                             <div class="absolute inset-0 bg-gradient-to-r from-accent/20 to-primary/20 rounded-full blur-2xl"></div>
-                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619123/WhatsApp_Image_2025-07-26_at_23.36.29_qdivgi.jpg" alt="Prof. Falode" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-xl">
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619123/WhatsApp_Image_2025-07-26_at_23.36.29_qdivgi.jpg" alt="Prof. Falode" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-xl">
                         </div>
                         <h3 class="font-display text-3xl font-bold text-primary mb-3">Prof. J. Adewunmi Falode</h3>
                         <div class="inline-block py-1 px-4 rounded-full bg-accent/10 text-accent font-medium mb-6">Editor-in-Chief</div>
@@ -264,7 +264,7 @@
                         <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center">
                             <div class="w-32 h-32 mx-auto mb-6 relative">
                                 <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
-                                <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619321/9bd03839-8e1b-4ac8-ab7b-f1254ed86e74_ifp6lw.jpg" alt="Wazeer Murtala" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                                <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619321/9bd03839-8e1b-4ac8-ab7b-f1254ed86e74_ifp6lw.jpg" alt="Wazeer Murtala" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                             </div>
                             <h3 class="font-display text-xl font-bold text-primary mb-3">Wazeer Murtala</h3>
                             <div class="inline-block py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Managing Editor</div>
@@ -276,7 +276,7 @@
                         <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center">
                             <div class="w-32 h-32 mx-auto mb-6 relative">
                                 <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
-                                <img src="https://res.cloudinary.com/dweovytuc/image/upload/v1753619323/df550228-5484-4ead-bd6a-e1ddc8c4bff2_tigvbx.jpg" alt="Dr. Faseke" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                                <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619323/df550228-5484-4ead-bd6a-e1ddc8c4bff2_tigvbx.jpg" alt="Dr. Faseke" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                             </div>
                             <h3 class="font-display text-xl font-bold text-primary mb-3">Dr. Jimi Faseke</h3>
                             <div class="inline-block py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Journal Editor</div>
