--- a/editorial-consultants.html
+++ b/editorial-consultants.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - LAJOPSS</title>
+    <title>Editorial Consultants - LAJOPSS</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -97,13 +97,6 @@
             right: -100px;
             animation: float 18s ease-in-out infinite reverse;
         }
-        .map-container {
-            position: relative;
-            width: 100%;
-            height: 400px;
-            border-radius: 1rem;
-            overflow: hidden;
-        }
     </style>
 </head>
 <body class="overflow-x-hidden">
@@ -120,11 +113,11 @@
                         <i class="fas fa-home mr-2"></i> Home
                     </a>
                     <div class="relative group">
-                        <button class="text-sm lg:text-base hover:text-accent transition-colors duration-300 flex items-center">
+                        <button class="text-sm lg:text-base text-accent transition-colors duration-300 flex items-center">
                             <i class="fas fa-users mr-2"></i> Editorial
                             <i class="fas fa-chevron-down ml-2 text-xs group-hover:rotate-180 transition-transform duration-300"></i>
                         </button>
-                        <div class="absolute left-0 mt-2 w-56 rounded-xl bg-white shadow-lg py-2 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 glass-effect border border-gray-100/20">
+                         <div class="absolute left-0 mt-2 w-56 rounded-xl bg-white shadow-lg py-2 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 glass-effect border border-gray-100/20">
                             <a href="editorial-team.html" class="block px-4 py-3 text-sm hover:text-accent hover:bg-accent/5 transition-all duration-300 flex items-center space-x-3">
                                 <i class="fas fa-users-gear text-accent/70"></i>
                                 <span>Editorial Team</span>
@@ -136,7 +129,7 @@
                             </a>
                         </div>
                     </div>
-                    <a href="contact.html" class="text-sm lg:text-base text-accent transition-colors duration-300 flex items-center">
+                    <a href="contact.html" class="text-sm lg:text-base hover:text-accent transition-colors duration-300 flex items-center">
                         <i class="fas fa-envelope mr-2"></i> Contact
                     </a>
                 </div>
@@ -151,13 +144,13 @@
                     <i class="fas fa-home mr-3"></i> Home
                 </a>
                 <div class="relative">
-                    <button id="mobile-dropdown-button" class="w-full text-left text-primary hover:text-accent transition-colors duration-300 flex items-center justify-between">
+                    <button id="mobile-dropdown-button" class="w-full text-left text-accent transition-colors duration-300 flex items-center justify-between">
                         <span class="flex items-center">
                             <i class="fas fa-users mr-3"></i> Editorial
                         </span>
                         <i class="fas fa-chevron-down text-xs transition-transform duration-300"></i>
                     </button>
-                    <div id="mobile-dropdown-menu" class="hidden mt-3 ml-6 flex flex-col space-y-1">
+                   <div id="mobile-dropdown-menu" class="hidden mt-3 ml-6 flex flex-col space-y-1">
                         <div class="h-px bg-gradient-to-r from-transparent via-accent/10 to-transparent mb-2"></div>
                         <a href="editorial-team.html" class="text-primary hover:text-accent transition-all duration-300 flex items-center px-3 py-2 rounded-lg hover:bg-accent/5">
                             <i class="fas fa-users-gear text-accent/70 mr-3"></i>
@@ -170,7 +163,7 @@
                         <div class="h-px bg-gradient-to-r from-transparent via-accent/10 to-transparent mt-2"></div>
                     </div>
                 </div>
-                <a href="contact.html" class="text-accent transition-colors duration-300 flex items-center">
+                <a href="contact.html" class="text-primary hover:text-accent transition-colors duration-300 flex items-center">
                     <i class="fas fa-envelope mr-3"></i> Contact
                 </a>
             </div>
@@ -181,66 +174,98 @@
     <section class="relative pt-40 pb-24 overflow-hidden">
         <div class="container mx-auto px-6">
             <div class="text-center relative z-10">
-                <span class="inline-block py-1 px-3 rounded-full text-sm bg-[#F6F8FA] text-accent mb-6">Get in Touch</span>
-                <h1 class="font-display text-5xl md:text-6xl lg:text-7xl font-bold mb-8 gradient-text tracking-tight">Contact Us</h1>
-                <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto leading-relaxed">Get in touch with our editorial team for inquiries, submissions, or general information.</p>
+                <span class="inline-block py-1 px-3 rounded-full text-sm bg-[#F6F8FA] text-accent mb-6">Editorial Leadership</span>
+                <h1 class="font-display text-5xl md:text-6xl lg:text-7xl font-bold mb-8 gradient-text tracking-tight">Editorial Consultants</h1>
+                <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto leading-relaxed">Meet the dedicated scholars and experts who ensure the highest standards of academic excellence in our journal.</p>
             </div>
         </div>
         <div class="absolute inset-0 bg-[radial-gradient(circle_at_top_right,_#F6F8FA,_transparent_70%)]"></div>
     </section>
 
-    <!-- Contact Information -->
-    <section class="py-24 relative">
+    <!-- Editorial Consultants Section -->
+    <section class="py-24 relative bg-gradient-to-b from-transparent to-[#F6F8FA]">
         <div class="abstract-shapes">
             <div class="shape-1"></div>
             <div class="shape-2"></div>
         </div>
         <div class="container mx-auto px-6">
-            <div class="max-w-6xl mx-auto">
-                <!-- Contact Information Cards -->
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Address Card -->
-                    <div class="card-hover">
-                        <div class="glass-effect rounded-[2rem] p-8 bg-white/40 h-full flex flex-col items-center text-center">
-                            <div class="w-16 h-16 bg-accent/10 text-accent rounded-2xl flex items-center justify-center 
-                                transition-all duration-300 hover:bg-accent hover:text-white transform hover:scale-110 mb-6">
-                                <i class="fas fa-map-marker-alt text-2xl"></i>
-                            </div>
-                            <h3 class="font-display text-xl font-bold text-primary mb-4">Address</h3>
-                            <p class="text-gray-600 leading-relaxed">Centre for Peace and Security Studies, Lagos State University, Ojo, Lagos, Nigeria</p>
+            <div class="max-w-xl mx-auto text-center mb-16">
+                <span class="inline-block py-1 px-3 rounded-full text-sm bg-[#F6F8FA] text-accent mb-4">Advisory Board</span>
+                <h2 class="font-display text-4xl font-bold mb-6 text-primary">Editorial Consultants</h2>
+                <p class="text-gray-600">Distinguished leaders and experts guiding our academic excellence.</p>
+            </div>
+            <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
+                <!-- Consultant 1 -->
+                <div class="card-hover">
+                    <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
+                        <div class="w-32 h-32 mx-auto mb-6 relative">
+                            <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619321/242cad50-aec2-4704-a53a-0c2f12e242e4_jvg8mk.jpg" alt="Prof. Akinyemi" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
+                        <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. (Sir) Akinwande Bolaji Akinyemi, CFR</h3>
+                        <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Former Minister of Foreign Affairs</div>
+                        <p class="text-gray-600">President, Academy of International Affairs</p>
+                        <p class="text-gray-500 text-sm">Lagos, Nigeria</p>
                     </div>
+                </div>
 
-                    <!-- Email Card -->
-                    <div class="card-hover">
-                        <div class="glass-effect rounded-[2rem] p-8 bg-white/40 h-full flex flex-col items-center text-center">
-                            <div class="w-16 h-16 bg-accent/10 text-accent rounded-2xl flex items-center justify-center 
-                                transition-all duration-300 hover:bg-accent hover:text-white transform hover:scale-110 mb-6">
-                                <i class="fas fa-envelope text-2xl"></i>
-                            </div>
-                            <h3 class="font-display text-xl font-bold text-primary mb-4">Email</h3>
-                            <a href="mailto:lajopss@lasu.edu.ng" 
-                               class="text-accent hover:text-primary transition-colors duration-300 font-medium">
-                                lajopss@lasu.edu.ng
-                            </a>
+                <!-- Consultant 2 -->
+                <div class="card-hover">
+                    <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
+                        <div class="w-32 h-32 mx-auto mb-6 relative">
+                            <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619322/969e04e7-fb21-4eb0-b3a5-8f04eafd9f6b_fzrisi.jpg" alt="Prof. Olatunji-Bello" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
+                        <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. Ibiyemi Ibilola Olatunji-Bello, mni, NPOM, FSPSP</h3>
+                        <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Vice Chancellor</div>
+                        <p class="text-gray-600">Lagos State University, Ojo</p>
                     </div>
+                </div>
 
-                    <!-- Phone Card -->
-                    <div class="card-hover">
-                        <div class="glass-effect rounded-[2rem] p-8 bg-white/40 h-full flex flex-col items-center text-center">
-                            <div class="w-16 h-16 bg-accent/10 text-accent rounded-2xl flex items-center justify-center 
-                                transition-all duration-300 hover:bg-accent hover:text-white transform hover:scale-110 mb-6">
-                                <i class="fas fa-phone text-2xl"></i>
-                            </div>
-                            <h3 class="font-display text-xl font-bold text-primary mb-4">Phone</h3>
-                            <p class="text-gray-600">+234 803 333 2355</p>
+                <!-- Consultant 3 -->
+                <div class="card-hover">
+                    <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
+                        <div class="w-32 h-32 mx-auto mb-6 relative">
+                            <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619323/e0e9a512-17cd-462c-a65c-08261573694b_sdcnet.jpg" alt="Prof. Akinterinwa" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
+                        <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. Bolaji Akinterinwa</h3>
+                        <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Former Director-General, NIIA</div>
+                        <p class="text-gray-600">Achievers University</p>
+                        <p class="text-gray-500 text-sm">Owo, Ondo</p>
+                    </div>
+                </div>
+
+                <!-- Consultant 4 -->
+                <div class="card-hover">
+                    <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
+                        <div class="w-32 h-32 mx-auto mb-6 relative">
+                            <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619326/6ca7d825-43de-44e3-9b74-6998e8ce86e2_amg3p7.jpg" alt="Prof. Moghalu" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                        </div>
+                        <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. Kingsley Moghalu</h3>
+                        <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">President and Vice Chancellor</div>
+                        <p class="text-gray-600">African School of Governance</p>
+                        <p class="text-gray-500 text-sm">Kigali, Rwanda</p>
+                    </div>
+                </div>
+
+                <!-- Consultant 5 -->
+                <div class="card-hover">
+                    <div class="glass-effect rounded-2xl p-8 bg-white/40 h-full text-center flex flex-col items-center">
+                        <div class="w-32 h-32 mx-auto mb-6 relative">
+                            <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
+                            <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619323/a434acbe-ef4d-49da-836c-73f58cd435da_hdnjdz.jpg" alt="Lt Gen Adeosun" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
+                        </div>
+                        <h3 class="font-display text-xl font-bold text-primary mb-3">Lt Gen Lamidi O Adeosun (Rtd) CFR</h3>
+                        <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Military Strategy Expert</div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+   
 
     <!-- Footer -->
     <footer class="bg-[#0A2540] text-gray-300 py-16 relative overflow-hidden">
