--- a/editorial-consultants.html
+++ b/editorial-consultants.html
@@ -230,7 +230,7 @@
                             <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619323/e0e9a512-17cd-462c-a65c-08261573694b_sdcnet.jpg" alt="Prof. Akinterinwa" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
                         <h3 class="font-display text-xl font-bold text-primary mb-3">Prof. Bolaji Akinterinwa</h3>
-                        <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Former Director-General, NIIA</div>
+                        <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Former Director-General, Nigerian Institute of International Affairs</div>
                         <p class="text-gray-600">Achievers University</p>
                         <p class="text-gray-500 text-sm">Owo, Ondo</p>
                     </div>
@@ -257,8 +257,10 @@
                             <div class="absolute inset-0 bg-gradient-to-r from-accent/10 to-primary/10 rounded-full blur-xl"></div>
                             <img src="https://res.cloudinary.com/dweovytuc/image/upload/f_auto,q_auto/v1753619323/a434acbe-ef4d-49da-836c-73f58cd435da_hdnjdz.jpg" alt="Lt Gen Adeosun" class="relative z-10 w-full h-full object-cover rounded-full border-4 border-white/90 shadow-lg">
                         </div>
-                        <h3 class="font-display text-xl font-bold text-primary mb-3">Lt Gen Lamidi O Adeosun (Rtd) CFR</h3>
+                        <h3 class="font-display text-xl font-bold text-primary mb-3">Lt Gen Lamidi O. Adeosun (Rtd) CFR</h3>
                         <div class="py-1 px-3 rounded-full bg-accent/5 text-accent text-sm mb-4">Military Strategy Expert</div>
+                        <p class="text-gray-600">Former Chief of Policy and Plans</p>
+                        <p class="text-gray-500 text-sm">Nigerian Army</p>
                     </div>
                 </div>
             </div>
