--- a/contact.html
+++ b/contact.html
@@ -286,6 +286,10 @@
                             <i class="fas fa-envelope text-accent group-hover:scale-110 transition-transform duration-300"></i>
                             <a href="mailto:lajopss@lasu.edu.ng" class="text-gray-400 hover:text-accent transition-colors duration-300">lajopss@lasu.edu.ng</a>
                         </li>
+                         <li class="flex items-center gap-3 group">
+                            <i class="fas fa-phone text-accent group-hover:scale-110 transition-transform duration-300"></i>
+                            <a href="tel:+2348033332355" class="text-gray-400 hover:text-accent transition-colors duration-300">+234 803 333 2355</a>
+                        </li>
                     </ul>
                 </div>
                 <div>
